--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <input type="button" value="4" class="button numberbutton" >
             <input type="button" value="5" class="button numberbutton" >
             <input type="button" value="6" class="button numberbutton" >
-            <input type="button" value="x" class="button operatorbutton">
+            <input type="button" value="*" class="button operatorbutton">
         </div>
         <div class="row3">
             <input type="button" value="1" class="button numberbutton" >
